--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: torch2
 channels:
+  - pyg
   - pytorch
   - anaconda
   - nvidia
@@ -324,9 +325,11 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
+    - apex==0.1
     - einops==0.7.0
     - fdtd==0.3.5
     - findiff==0.10.0
+    - fyeldgenerator==0.1.7
     - hydra-core==1.3.2
     - jaxlib==0.4.23+cuda11.cudnn86
     - nvidia-cublas-cu11==11.11.3.6
@@ -339,3 +342,8 @@ dependencies:
     - nvidia-cusolver-cu11==11.4.1.48
     - nvidia-cusparse-cu11==11.7.5.86
     - nvidia-nccl-cu11==2.19.3
+    - phiflow==2.5.3
+    - phiml==1.2.1
+    - swin-window-process==0.0.0
+    - timm==0.9.12
+    - x-transformers==1.24.5
